--- a/practica1.html
+++ b/practica1.html
@@ -1,13 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
-  <form>
-      <label>
-        First name
-        <input type="checkbox" role="switch" checked
-        />
-        Publish on my profile
-      </label>
-      <form>
-</body>
-</html>
- 
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currículum Vitae</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        h2 {
+            color: #2c3e50;
+        }
+        h3 {
+            color: #34495e;
+        }
+        .contact-info {
+            margin-bottom: 20px;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Curriculum</h1>
+    <img src="img/foto1.jpg" alt="Juan Pablo" style="width:150px;height:auto;">
+    <p><strong>Introducción:</strong> Soy Juan Pablo, un profesional en UX con experiencia en Figma.</p>
+
+    <div class="contact-info">
+        <h2>Información de Contacto</h2>
+        <p><strong>Teléfono:</strong> 3143214045</p>
+        <p><strong>Correo Electrónico:</strong> jp@email.com</p>
+        <p><strong>LinkedIn:</strong> JuanPabloP</p>
+        <p><strong>Ubicación:</strong> Bucaramanga, Colombia</p>
+    </div>
+
+    <div class="section">
+        <h2>Educación</h2>
+
+        <div class="education-item">
+            <h3>Ing. de Sistemas</h3>
+            <p><strong>Descripción:</strong> Desarrollo de aplicativos</p>
+            <p><strong> 10 Ago.2019 - 20 Ago. 2024 </strong> </p>
+        </div>
+
+        <div class="education-item">
+            <h3>Infraestructura TI</h3>
+            <p><strong>Descripción:</strong> Servidores</p>
+            <p><strong>10 Oct. 2018 - 12 Dic. 2024:</strong> </p>
+        </div>
+    </div>
+    
+    <div class="section">
+      <h2>Experiencia Laboral</h2>
+  
+      <div class="experience-item">
+          <h3>Desarrollador Backend</h3>
+          <p><strong>Descripción:</strong> Desarrollé e implementé servicios backend utilizando Node.js y Express.js, así como gestioné bases de datos NoSQL con MongoDB. Optimicé el rendimiento de aplicaciones web, asegurando una escalabilidad efectiva.</p>
+          <p><strong>Fecha de Inicio - Fecha de Finalización:</strong> Enero/2021 - Presente</p>
+      </div>
+  
+      <div class="experience-item">
+          <h3>Desarrollador Full Stack</h3>
+          <p><strong>Descripción:</strong> Trabajé en un equipo ágil para desarrollar aplicaciones web interactivas utilizando React.js para el frontend y Node.js para el backend. Fui responsable de la integración de APIs y la implementación de nuevas funcionalidades.</p>
+          <p><strong>Fecha de Inicio - Fecha de Finalización:</strong> Junio/2019 - Diciembre/2020</p>
+      </div>
+  
+      <div class="experience-item">
+          <h3>Interno de Desarrollo</h3>
+          <p><strong>Descripción:</strong> Colaboré en la creación de software y la mejora de procesos internos utilizando Python y Django. Participé en pruebas de calidad y en la automatización de tareas repetitivas.</p>
+          <p><strong>Fecha de Inicio - Fecha de Finalización:</strong> Enero/2018 - Mayo/2019</p>
+      </div>
+  </div>
+  
+  <div class="section">
+      <h2>Habilidades y Capacidades</h2>
+      <ul>
+          <li>JavaScript (Node.js, React.js)</li>
+          <li>HTML5, CSS3, SASS</li>
+          <li>MongoDB, SQL, NoSQL</li>
+          <li>Git, GitHub, GitLab</li>
+          <li>Metodologías ágiles (Scrum, Kanban)</li>
+      </ul>
+  </div>
+  
+  <div class="section">
+      <h2>Logros</h2>
+      <ul>
+          <li><strong>Certificación Full Stack Developer:</strong> Certificación en Desarrollo Web Full Stack por la Universidad de Tecnología XYZ (2022).</li>
+          <li><strong>Proyecto Móvil Exitoso:</strong> Desarrollé una aplicación móvil que alcanzó más de 10,000 descargas en Google Play Store.</li>
+          <li><strong>Mejora de la Eficiencia:</strong> Reduje los tiempos de carga de una aplicación web en un 40% mediante la optimización del código y la base de datos.</li>
+      </ul>
+  </div>
