--- a/practica1.html
+++ b/practica1.html
@@ -11,7 +11,7 @@
             line-height: 1.6;
         }
         h2 {
-            color: #2c3e50;
+            color: #50492c;
         }
         h3 {
             color: #34495e;
